--- a/day_01.ipynb
+++ b/day_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e57d283c",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "13d03059",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "4    2020-09-30  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "aea1d96f",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "19  Сэнди  Акита  Коричневый           60           30    2015-08-02"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ceaca5a9",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "baa3d3ba",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "(20, 6)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6591da80",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0bfa9352",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "73a68aab",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "RangeIndex(start=0, stop=20, step=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "7a03742d",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "max      70.000000    40.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "b322f49a",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "13           40    2015-09-07  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "b623fd95",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1054,7 @@
        "6             3    2019-08-12  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "b82b0a20",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1329,7 @@
        "13           40    2015-09-07  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "b1b42ef2",
    "metadata": {},
    "outputs": [
@@ -1604,7 +1604,7 @@
        "13           40    2015-09-07  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "4aea2a2b",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1879,7 @@
        "13           40    2015-09-07  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "5cefd7cc",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1920,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "8ff6c22d",
    "metadata": {},
    "outputs": [
@@ -2068,7 +2068,7 @@
        "19     Сэнди"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "38cbd7f9",
    "metadata": {},
    "outputs": [
@@ -2237,7 +2237,7 @@
        "19     Сэнди           60"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "ca776f5d",
    "metadata": {},
    "outputs": [
@@ -2385,7 +2385,7 @@
        "19     Сэнди"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "b0e983eb",
    "metadata": {},
    "outputs": [
@@ -2533,7 +2533,7 @@
        "19     Сэнди"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2544,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "eb983a92",
    "metadata": {},
    "outputs": [
@@ -2665,7 +2665,7 @@
        "19    2015-08-02  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "0917d3a9",
    "metadata": {},
    "outputs": [
@@ -2738,7 +2738,7 @@
        "5  Мило  Лабрадор  Абрикосовый           58           27    2016-03-25"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "c1de9872",
    "metadata": {},
    "outputs": [
@@ -2881,7 +2881,7 @@
        "18    2016-06-23  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2892,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "0b532319",
    "metadata": {},
    "outputs": [
@@ -3079,7 +3079,7 @@
        "17    2019-10-12  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3090,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "592dd851",
    "metadata": {},
    "outputs": [
@@ -3142,7 +3142,7 @@
        "6  Бэйли  Чихуахуа  Черный           20            3    2019-08-12"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "ba0184a6",
    "metadata": {},
    "outputs": [
@@ -3309,7 +3309,7 @@
        "17    2019-10-12  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3320,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "a6c91fb5",
    "metadata": {},
    "outputs": [
@@ -3425,7 +3425,7 @@
        "4    2020-09-30        0.20  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3437,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "b35f0a86",
    "metadata": {},
    "outputs": [
@@ -3447,7 +3447,7 @@
        "(20, 7)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3458,7 +3458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "9fbc6dfc",
    "metadata": {},
    "outputs": [],
@@ -3468,7 +3468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "0fac223d",
    "metadata": {},
    "outputs": [
@@ -3579,7 +3579,7 @@
        "4    2020-09-30        0.20   75.000000  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3590,7 +3590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "ba575291",
    "metadata": {},
    "outputs": [
@@ -3694,7 +3694,7 @@
        "max      70.000000    40.000000    0.700000  156.250000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3705,7 +3705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "b42e479f",
    "metadata": {},
    "outputs": [
@@ -3723,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "e64abf2a",
    "metadata": {},
    "outputs": [
@@ -3741,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "bde96b66",
    "metadata": {},
    "outputs": [
@@ -3761,7 +3761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "78fe8194",
    "metadata": {},
    "outputs": [
@@ -3779,7 +3779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "e9a3281b",
    "metadata": {},
    "outputs": [],
@@ -3790,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "3df3b023",
    "metadata": {},
    "outputs": [],
@@ -3801,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "0b3063fe",
    "metadata": {},
    "outputs": [
@@ -3851,7 +3851,7 @@
        "pct40         11.2         38.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3862,7 +3862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "91266f85",
    "metadata": {},
    "outputs": [
@@ -3892,13 +3892,70 @@
        "Name: Weight (kg), dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dogs['Weight (kg)'].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "541f51a5",
+   "metadata": {},
+   "source": [
+    "### Создание датасета посещение вет лечебницы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9cfcabef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Visit Date    Name               Breed  Weight (kg)\n",
+      "0   2023-11-04   Чарли           Ротвейлер            4\n",
+      "1   2023-12-14    Джек            Шиба-ину            4\n",
+      "2   2023-02-24   Тедди              Боксер           35\n",
+      "3   2023-06-11    Макс  Йоркширский терьер           30\n",
+      "4   2023-08-13    Мило            Шиба-ину           38\n",
+      "..         ...     ...                 ...          ...\n",
+      "70  2023-01-07  Оливер           Ротвейлер           32\n",
+      "71  2023-05-13   Белль              Боксер           38\n",
+      "72  2023-03-01    Джек            Далматин           15\n",
+      "73  2023-06-11  Бентли               Акита           19\n",
+      "74  2023-09-26    Рекс               Акита           14\n",
+      "\n",
+      "[75 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import datetime\n",
+    "\n",
+    "vet_visits = {\n",
+    "    'Name': [random.choice(data['Name']) for _ in range(75)],\n",
+    "    'Breed': [random.choice(data['Breed']) for _ in range(75)],\n",
+    "    'Color': [random.choice(data['Color']) for _ in range(75)],\n",
+    "    'Height (cm)': [random.randint(20, 70) for _ in range(75)],\n",
+    "    'Weight (kg)': [random.randint(3, 40) for _ in range(75)],\n",
+    "    'Date of Birth': [f\"{random.randint(2015, 2022)}-{random.randint(1, 12):02d}-{random.randint(1, 28):02d}\" for _ in range(75)],\n",
+    "    'Visit Date': [datetime.date(2023, random.randint(1, 12), random.randint(1, 28)) for _ in range(75)]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "vet_visits = pd.DataFrame(vet_visits)\n",
+    "\n",
+    "vet_visits = vet_visits[[\"Visit Date\", \"Name\", \"Breed\", \"Weight (kg)\"]]\n",
+    "\n",
+    "print(vet_visits)"
    ]
   }
  ],
