Промежуточный итог дня 6

--- a/day_05.ipynb
+++ b/day_05.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "id": "e93134f6",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "id": "5fc188ca",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "id": "4be9e2db",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "id": "5e006e62",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "id": "bde70899",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "id": "79530d87",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "id": "52b6178a",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "id": "ecc112bd",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "id": "0733cb84",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "id": "a512be28",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "id": "f18afbe8",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "id": "147cdfa5",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "id": "14c65a4a",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "id": "c31e5465",
    "metadata": {},
    "outputs": [
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "id": "03d56a31",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1802,7 @@
        "max     67.100000    2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "id": "679d6d83",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1824,7 @@
        "       -0.23302806,  0.3109031 , 20.26471566])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "id": "baafb6b6",
    "metadata": {},
    "outputs": [],
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "id": "d52f0f41",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1866,7 @@
        "0.4687834343348457"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "id": "f206f380",
    "metadata": {},
    "outputs": [
@@ -1895,7 +1895,7 @@
        "22.80048835176816"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "id": "b5d5a8bc",
    "metadata": {},
    "outputs": [],
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "id": "1696925a",
    "metadata": {},
    "outputs": [
@@ -1943,6 +1943,115 @@
    ],
    "source": [
     "print(cv_res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e66486",
+   "metadata": {},
+   "source": [
+    "### Гребневая регрессия"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71e4b512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [-0.12093905  0.18444617  0.16904719  0.12351932 -0.03756664 -0.23302806\n",
+      "  0.3109031  20.26471566] 70.7663969782604\n",
+      "0.01 [-0.12085608  0.18445607  0.16906121  0.12352395 -0.03752743 -0.2319177\n",
+      "  0.31092735 20.26057512] 70.76309075382841\n",
+      "0.1 [-0.12011113  0.18454483  0.16918709  0.12356555 -0.03717503 -0.22197277\n",
+      "  0.31114529 20.22339119] 70.73340759311134\n",
+      "1 [-0.11283313  0.18540562  0.17042248  0.12397297 -0.03370388 -0.12713444\n",
+      "  0.31329098 19.85938039] 70.44360375091088\n",
+      "10 [-5.37722987e-02  1.91974362e-01  1.80815598e-01  1.27342063e-01\n",
+      " -3.66295781e-03  4.90038715e-01  3.31798583e-01  1.68555460e+01] 68.1034464752671\n",
+      "100 [0.12946931 0.20847675 0.21770207 0.13868822 0.11049652 0.83122365\n",
+      " 0.40214748 6.81656291] 60.83775945809184\n",
+      "1000 [0.18399383 0.21675921 0.2406383  0.14559961 0.17207577 0.16134704\n",
+      " 0.44465263 0.99573683] 57.356556494032716\n",
+      "[0.4687834343348444, 0.4687711195576295, 0.4686601457332129, 0.46753761367877944, 0.4558228848386707, 0.38667645281099305, 0.32671958760074704]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "scores = []\n",
+    "for alpha in [0, 0.01, 0.1, 1, 10, 100, 1000]:\n",
+    "    ridge = Ridge(alpha=alpha)\n",
+    "    ridge.fit(X_train, y_train)\n",
+    "    y_pred = ridge.predict(X_test)\n",
+    "    scores.append(ridge.score(X_test, y_test))\n",
+    "    print(alpha, ridge.coef_, ridge.intercept_)\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb094fcb",
+   "metadata": {},
+   "source": [
+    "### Лассо регрессия"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "669c69fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [-0.12093905  0.18444617  0.16904719  0.12351932 -0.03756664 -0.23302806\n",
+      "  0.3109031  20.26471566]\n",
+      "0.01 [-0.11649139  0.18479029  0.168892    0.12361191 -0.03687469 -0.12475871\n",
+      "  0.31039879 20.18378432]\n",
+      "0.1 [-0.083619    0.18489659  0.16795319  0.1243114  -0.02510527 -0.\n",
+      "  0.30886567 19.60419382]\n",
+      "1 [0.00000000e+00 1.93334387e-01 1.92011444e-01 1.30662594e-01\n",
+      " 1.06384899e-02 0.00000000e+00 3.41073848e-01 1.42974959e+01]\n",
+      "10 [0.         0.20927141 0.25354296 0.14959548 0.         0.\n",
+      " 0.41737595 0.        ]\n",
+      "20 [0.         0.17688189 0.18508719 0.15239122 0.         0.\n",
+      " 0.33664195 0.        ]\n",
+      "50 [0.         0.07600263 0.         0.16048748 0.         0.\n",
+      " 0.09236981 0.        ]\n",
+      "[0.46878343433484404, 0.46858004076918236, 0.4666331504458072, 0.4433508615824766, 0.3269082617994207, 0.33109063948313666, 0.32023346183326995]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/artemgolubnichiy/myJupyterNotebook/.conda/lib/python3.11/site-packages/sklearn/base.py:1365: UserWarning: With alpha=0, this algorithm does not converge well. You are advised to use the LinearRegression estimator\n",
+      "  return fit_method(estimator, *args, **kwargs)\n",
+      "/Users/artemgolubnichiy/myJupyterNotebook/.conda/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:695: UserWarning: Coordinate descent with no regularization may lead to unexpected results and is discouraged.\n",
+      "  model = cd_fast.enet_coordinate_descent(\n",
+      "/Users/artemgolubnichiy/myJupyterNotebook/.conda/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:695: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 7.618e+04, tolerance: 2.937e+01\n",
+      "Linear regression models with a zero l1 penalization strength are more efficiently fitted using one of the solvers implemented in sklearn.linear_model.Ridge/RidgeCV instead.\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "scores = []\n",
+    "for alpha in [0, 0.01, 0.1, 1, 10, 20, 50]:\n",
+    "    lasso = Lasso(alpha=alpha)\n",
+    "    lasso.fit(X_train, y_train)\n",
+    "    y_pred = lasso.predict(X_test)\n",
+    "    scores.append(lasso.score(X_test, y_test))\n",
+    "    print(alpha, lasso.coef_)\n",
+    "print(scores)"
    ]
   }
  ],
