Промежуточный вариант дня 11

--- a/day_10.ipynb
+++ b/day_10.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 31,
    "id": "12546d90",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  Me, ready to go at supermarket during the #COV...  Extremely Negative  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 32,
    "id": "e17d33c1",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 33,
    "id": "4ce308ac",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "7888   As some people have now been made redundant fr...            Positive  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 34,
    "id": "a7babc71",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 35,
    "id": "6737d10c",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "0"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 36,
    "id": "ac0f2a02",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "4  Me, ready to go at supermarket during the #COV...  Extremely Negative"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 37,
    "id": "0b77879a",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 38,
    "id": "6f734530",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 39,
    "id": "fc5e907e",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 40,
    "id": "138160fa",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "\twith 1149620 stored elements and shape (41157, 80424)>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 41,
    "id": "0a60a809",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
        "       'cet'], dtype=object)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 42,
    "id": "ead4bd95",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 43,
    "id": "93c6f346",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 44,
    "id": "f36035c9",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 45,
    "id": "b90ac90b",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "people            5574"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 46,
    "id": "f4ff71b6",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 47,
    "id": "8c6b7f86",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 48,
    "id": "ad4a8965",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 49,
    "id": "7056afc2",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "'How come #TrumpIsAnIdiot or #trumpneedstoshutup is not trending?? For real!! People are freaked, stores canÂ\\x92t keep food on their shelf, and the stock market is out of control. @realDonaldTrump please for the sake of the county shut up. #coronavirus'"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 50,
    "id": "0461a712",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "'come trumpisanidiot trumpneedstoshutup trending real people freaked stores keep food shelf stock market control please sake county shut coronavirus'"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 51,
    "id": "3eaad4f4",
    "metadata": {},
    "outputs": [],
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 52,
    "id": "5b853cb9",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
        "\twith 676845 stored elements and shape (41157, 42811)>"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 53,
    "id": "fa2fa703",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 54,
    "id": "26ca3ea2",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "4  [readi, supermarket, covid, outbreak, paranoid...  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 55,
    "id": "ea7ad07b",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
        "4  readi supermarket covid outbreak paranoid food...  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 56,
    "id": "ebd70056",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 57,
    "id": "095c65f8",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
        "\twith 669246 stored elements and shape (41157, 32589)>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 58,
    "id": "71343291",
    "metadata": {},
    "outputs": [],
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 59,
    "id": "751da427",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "3b850261",
    "metadata": {},
    "outputs": [
@@ -1371,23 +1371,70 @@
       "      weighted avg       0.46      0.43      0.43      8232\n",
       "\n"
      ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mПри выполнении кода в текущей ячейке или предыдущей ячейке ядро аварийно завершило работу. \n",
-      "\u001b[1;31mПроверьте код в ячейках, чтобы определить возможную причину сбоя. \n",
-      "\u001b[1;31mЩелкните <a href='https://aka.ms/vscodeJupyterKernelCrash'>здесь</a>, чтобы получить дополнительные сведения. \n",
-      "\u001b[1;31mПодробнее см. в <a href='command:jupyter.viewOutput'>журнале Jupyter</a>."
-     ]
     }
    ],
    "source": [
     "pipe_1 = Pipeline([('vectorizer', TfidfVectorizer()), ('classifire', MultinomialNB(alpha=0.005))])\n",
     "pipe_1.fit(X_train, y_train)\n",
     "y_pred = pipe_1.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred, target_names=class_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f680444",
+   "metadata": {},
+   "source": [
+    "### Логистическая регрессия"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "03c8a47b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5795675413022352\n",
+      "                    precision    recall  f1-score   support\n",
+      "\n",
+      "Extremely Negative       0.65      0.49      0.56      1096\n",
+      "Extremely Positive       0.69      0.57      0.63      1325\n",
+      "          Negative       0.51      0.51      0.51      1983\n",
+      "           Neutral       0.65      0.68      0.66      1543\n",
+      "          Positive       0.53      0.62      0.57      2285\n",
+      "\n",
+      "          accuracy                           0.58      8232\n",
+      "         macro avg       0.60      0.57      0.58      8232\n",
+      "      weighted avg       0.59      0.58      0.58      8232\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/artemgolubnichiy/myJupyterNotebook/.conda/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 100 iteration(s) (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+      "\n",
+      "Increase the number of iterations to improve the convergence (max_iter=100).\n",
+      "You might also want to scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "pipe_2 = Pipeline([('vectorizer', TfidfVectorizer()), ('classifire', LogisticRegression())])\n",
+    "pipe_2.fit(X_train, y_train)\n",
+    "y_pred = pipe_2.predict(X_test)\n",
     "print(accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred, target_names=class_names))"
    ]
