--- a/day_11.ipynb
+++ b/day_11.ipynb
@@ -2737,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 131,
    "id": "5a89e22a",
    "metadata": {},
    "outputs": [
@@ -2747,7 +2747,7 @@
        "0.8784530386740331"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2755,7 +2755,7 @@
    "source": [
     "pipe = Pipeline([\n",
     "    ('vectorizer', TfidfVectorizer(ngram_range=(1,3))),\n",
-    "    ('classifire', SVC(random_state=14))\n",
+    "    ('classifire', SVC(random_state=29))\n",
     "])\n",
     "pipe.fit(X_train, y_train)\n",
     "pipe.score(X_test, y_test)"
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 132,
    "id": "01145546",
    "metadata": {},
    "outputs": [
@@ -2794,7 +2794,58 @@
        "array([ True, False, False,  True])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.predict([positive_sentence, negative_sentence, sentence, sentence_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "107707db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    text = word_tokenize(text)\n",
+    "    text = \" \".join([ps.stem(str(word)) for word in text if not word in stopwords.words(\"english\") and word not in [\".\", \",\", \"?\", \"@\", \"$\", \"/\"] and not word.isspace()])\n",
+    "    text = re.sub(emoji_pattern, r'', text)\n",
+    "    text = \"\".join(re.findall(regexPuct, text, re.MULTILINE))\n",
+    "    text = \" \".join(text.split())\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "9268c68a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_sentence = preprocess(positive_sentence)\n",
+    "negative_sentence = preprocess(negative_sentence)\n",
+    "sentence = preprocess(sentence)\n",
+    "sentence_2 = preprocess(sentence_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "0e29b93f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True])"
+      ]
+     },
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
